# LOSAT

./: AGENTS.md  BLASTN_DEBUG_MANUAL.md  BLASTN_NCBI_PARITY_PLAN.md  BLASTN_STATUS.md  CLAUDE.md  CUTOFF_SCORE_ANALYSIS.md  DEBUG_SESSION_SUMMARY.md  DEBUG_SESSION_SUMMARY_2.md  DEBUG_SESSION_SUMMARY_3.md  DEBUG_SESSION_SUMMARY_4.md  FIX_2X_HITS_PLAN.md  GENCODE4_ANALYSIS.md  LICENSE  NCBI_BLAST_IMPLEMENTATION_DETAILS.md  NEXT_SESSION_PROMPT.md  PR_DESCRIPTION.md  PR_DESCRIPTION_PHASE1.md  PR_INFO.md  PR_SUMMARY.md  README.md  REFACTORING_PLAN.md  REFACTORING_ROADMAP.md  TBLASTX_2X_HIT_INVESTIGATION.md  TBLASTX_CUTOFF_SCORE_FIX_PROGRESS.md  TBLASTX_TEST_RESULTS.md  compare_tblastx_results.sh  cursorrules.mdc
LOSAT/: .gitignore  BLASTN_NCBI_PARITY_IMPLEMENTATION_PLAN.md  BLASTN_NCBI_PARITY_REVISION_PLAN.md  Cargo.toml  LONG_SEQUENCE_EXCESS_HITS_FACTORS.md  NEXT_SESSION_PROMPT.md  SIMD_OPTIMIZATION_STATUS.md  TBLASTX_FILTERING.md  TBLASTX_FIX_SUMMARY.md  TBLASTX_IMPLEMENTATION_REVIEW.md  TBLASTX_INTEGRATION_TEST_RESULTS.md  TBLASTX_LONG_SEQUENCE_HSP_FIX_PLAN.md  TBLASTX_NCBI_PARITY_FIX_PLAN.md  TBLASTX_NCBI_PARITY_REVISION_PLAN.md  TBLASTX_NCBI_PARITY_STATUS.md  TBLASTX_PARALLELIZATION_PLAN.md  TBLASTX_SEEDING_EXTENSION_DIFFERENCES.md  残る要調査項目.md
LOSAT/docs/: LOSAT_BLAST_DISCREPANCIES.md  NEXT_SESSION_PROMPT.md  NEXT_SESSION_PROMPT_2025-12-30.md  NEXT_SESSION_PROMPT_2025-12-31_FIX_WORK_EXPLOSION.md  NEXT_SESSION_PROMPT_2025-12-31_TBLASTX_FEWER_HITS.md  NEXT_SESSION_PROMPT_2026-01-01_PERF_REGRESSION.md  NEXT_SESSION_PROMPT_2026-01-01_TBLASTX_HF_SUPPRESSION_PARITY.md  (+12 more)
(+606 files in other folders)
