[package]
name = "LOSAT"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bio = "1.6"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.11"
lazy_static = "1.5"
num_cpus = "1.0"
indicatif = "0.17"
bitvec = "1.0"
rustc-hash = "1.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
