[package]
name = "LOSAT"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bio = "1.6"
clap = { version = "4.5", features = ["derive"] }
rayon = { version = "1.11", optional = true }
lazy_static = "1.5"
num_cpus = { version = "1.0", optional = true }
indicatif = "0.17"
bitvec = "1.0"
rustc-hash = "1.1"

[features]
default = ["parallel"]
parallel = ["rayon", "num_cpus"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
